--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="rps.css">
-    <title>Document</title>
+    <title>RockPaperScissors</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Aleo&family=Amatic+SC&family=Bangers&family=Bebas+Neue&family=Boogaloo&family=Dancing+Script:wght@500&family=Foldit:wght@600&family=Hammersmith+One&family=Kalam&family=Kaushan+Script&family=League+Gothic&family=Lobster+Two&family=Oswald&family=Patrick+Hand&family=Poppins:wght@200&family=Roboto+Condensed&family=Roboto:wght@500&family=Rouge+Script&family=Style+Script&display=swap"
         rel="stylesheet">
